<resources>
    <string name="app_name">DigitalOcean</string>
    <string name="download_file">Download File</string>
    <string name="country">Country</string>
    <string name="server">Server</string>
    <string name="size_10_mb">10MB</string>
    <string name="size_100_mb">100MB</string>
    <string name="size_1_gb">1GB</string>
    <string name="size_5_gb">5GB</string>
    <string name="file_downloaded">File downloaded</string>
    <string name="time">Time</string>
    <string name="ms">ms</string>
    <string name="download_history">Download History</string>
    <string name="test">Test</string>
    <string name="loading_please_wait">Loading please wait</string>
    <string name="no_download_history">No download history. Run some test!</string>
    <string name="mbps">Mbps</string>
    <string name="oops">Opps!</string>
    <string name="file_size_not_supported">File size not supported at the moment</string>
    <string name="tor_mode">Tor Mode</string>
    <string name="got_tor_control_connection">Got Tor control connection</string>
    <string name="tor_connection_loading">Tor control loading…</string>
    <string name="use_another_network">Use another network</string>
    <string name="another_network">Another network</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unkown_issue">Unkown Issue</string>
</resources>