<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.dashboard.DashBoardActivity">

    <data>

        <variable
            name="downloadResult"
            type="String" />

        <variable
            name="baseUrl"
            type="String" />

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="btnText"
            type="Boolean" />

        <variable
            name="handler"
            type="io.github.lokarzz.speedtest.ui.dashboard.DashBoardActivity.Handler" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/app_name" />

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{() -> handler.onClickHistory()}"
            app:srcCompat="@drawable/ic_history"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_base_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{baseUrl}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="digital ocean base url" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_country"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/country"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_base_url">

                <AutoCompleteTextView
                    android:id="@+id/actv_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_country_servers"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/server"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_country">

                <AutoCompleteTextView
                    android:id="@+id/actv_country_servers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rg_file_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checkedButton="@id/rb_10_mb"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_country_servers">

                <RadioButton
                    android:id="@+id/rb_10_mb"
                    style="@style/FileSizeRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_10_mb" />

                <RadioButton
                    android:id="@+id/rb_100_mb"
                    style="@style/FileSizeRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_100_mb" />

                <RadioButton
                    android:id="@+id/rb_1_gb"
                    style="@style/FileSizeRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_1_gb" />

                <RadioButton
                    android:id="@+id/rb_5_gb"
                    style="@style/FileSizeRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_5_gb" />

            </RadioGroup>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_download_file"
                style="@style/ConstraintButtonStyle"
                enable="@{!isLoading}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:animateLayoutChanges="true"
                android:onClick="@{() -> handler.onClickDownload()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_file_size">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_download_file"
                    style="@style/TextAppearance.Material3.LabelLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{isLoading ? @string/loading_please_wait : @string/test}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_progress"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/loading_please_wait" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/btn_progress"
                    show="@{isLoading}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:indeterminate="true"
                    android:minHeight="0dp"
                    app:indicatorSize="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_download_file"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{downloadResult}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_download_file"
                tools:text="Results here" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>